k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pipelineforge-service
  namespace: pipelineforge
  labels:
    app.kubernetes.io/name: pipelineforge
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: pipelineforge
    app.kubernetes.io/component: app
